OPENALEX STANDARD-FORMAT SNAPSHOT RELEASE NOTES

RELEASE 2022-12-21
- the values in host_venue have been added to alternate_host_venues in works, which paves way for the new locations
list that will contain all possible venues for a work
- added new works

RELEASE 2022-11-14
- new fields in venues: type, apc_usd, alternate_titles, abbreviated_title, fatcat_id, and wikidata_id
- added new works

RELEASE 2022-10-10
- moved to the V3 tagger API giving complete paths to concept level 0
- restored 170M "lost" citations that were in MAG and we deleted
- added new works

RELEASE 2022-09-16
- added 1.3 million new Works
- removed 700 thousand duplicate Authors

RELEASE 2022-08-09
- removed duplicate institutions for each author in Work.authorships
- made DOIs unique across Works. removed incorrect DOIs from 500K works and merged 1M sets of works with the same DOI.
- added 900K new Works

RELEASE 2022-07-09
- added new papers and corresponding data
- added missing related works
- updated many concepts using improved algorithm
- updated many affiliation mappings using improved algorithm
- removed duplicate Authors and Works

RELEASE 2022-06-09
- added new papers and corresponding data
- added about 28 million papers with Crossref DOIs
- added 23 thousand new journal webpage links, thanks in large part to DOAJ data
- fixed a bug with cited_by_year in venues
- new works now use an improved algorithm for mapping affiliation data to ROR IDs
- merged some duplicate institutions and venues (all references have been consolidated to one of the IDs)

RELEASE 2022-05-12
- added new papers and corresponding data

RELEASE 2022-04-30
- added new papers and corresponding data
- updated 8715 venues that had issn_l listed but no issns in "issns" key

RELEASE 2022-04-07
- added new papers and corresponding data
- add DOIs to 1,242,303 existing works
- new related works to many works missing them

RELEASE 2022-03-11
- added new papers and corresponding data
- added 1181 new journals to Venues