@@ -47,3 +47,4 @@ data_statements_to_embed.jsonl
 node_modules/
 package*
 creds.py
+20230131v1/2023-01-31_publication-venues.csv
