@@ -7,3 +7,12 @@ A database to do science of science.
 |              | works  | citations | authors | venues | institutions | text_parsed | embeddings
 | -------------| ------------- | ------------- | ------------- |------------- |------------- |------------- |------------- |
 | semantic scholar|  210M | 2.4B | 80.4M   | 191.5K | ? | 10.2M | 120M
+
+## Instructions
+
+ - `update_mongodb.sh`: push and pull data from and to the papersDB collection in our mongoDB. Run 
+
+```shell
+# update authors from openalex
+sh update_mongodb.sh oa authors
+```
