@@ -1,5 +1,11 @@
 OPENALEX STANDARD-FORMAT SNAPSHOT RELEASE NOTES
 
+RELEASE 2023-02-21
+- merged ~170 million authors into deleted author record as part of disambiguation project
+- renamed venues to sources
+- add publishers entity
+- added new works
+
 RELEASE 2022-12-21
 - the values in host_venue have been added to alternate_host_venues in works, which paves way for the new locations
 list that will contain all possible venues for a work
@@ -10,7 +16,7 @@ RELEASE 2022-11-14
 - added new works
 
 RELEASE 2022-10-10
-- moved to the V3 tagger API giving complete paths to concept level 0
+- implemented automated concept tagger v3, which provides complete paths to concept level 0
 - restored 170M "lost" citations that were in MAG and we deleted
 - added new works
 
@@ -42,6 +48,7 @@ RELEASE 2022-05-12
 - added new papers and corresponding data
 
 RELEASE 2022-04-30
+- implemented automated concept tagger v2, which uses more fields to assign concepts to works
 - added new papers and corresponding data
 - updated 8715 venues that had issn_l listed but no issns in "issns" key
 
@@ -79,7 +86,7 @@ Partial release on 2022-02-04 (updated Institutions and Venues)
 RELEASE 2022-01-31
 - added new papers and corresponding data
 - remove blank lines
-- citation counts for Concepts now correspond to algorithm_version 2
+- citation counts for concepts use improved algorithm
 
 RELEASE 2022-01-24
 - added work.abstract_inverted_index
